@@ -46,7 +46,7 @@ fid_sub_time	1	16	[ 0 1 ]
 profile_modes	fid_block_time	block
 profile_modes	fid_line_time	line
 profile_modes	fid_sub_time	sub
-sub_subinfo	DB::disable_profile	[ undef 0 0 1 0 0 0 0 ]
+sub_subinfo	DB::disable_profile	[ 1 0 0 1 0 0 0 0 ]
 sub_subinfo	DB::disable_profile	called_by	1	18	[ 1 0 0 0 0 0 0 main::RUNTIME ]
 sub_subinfo	main::BEGIN	[ 1 0 0 0 0 0 0 0 ]
 sub_subinfo	main::CORE:unlink	[ 1 0 0 1 0 0 0 0 ]
