@@ -121,7 +121,7 @@ profile_modes	fid_block_time	block
 profile_modes	fid_line_time	line
 profile_modes	fid_sub_time	sub
 sub_subinfo	Devel::NYTProf::Test::example_sub	[ 2 13 13 0 0 0 0 0 ]
-sub_subinfo	Devel::NYTProf::Test::example_xsub	[ undef undef undef 5 0 0 0 0 ]
+sub_subinfo	Devel::NYTProf::Test::example_xsub	[ 1 undef undef 5 0 0 0 0 ]
 sub_subinfo	Devel::NYTProf::Test::example_xsub	called_by	1	17	[ 1 0 0 0 0 0 0 main::RUNTIME ]
 sub_subinfo	Devel::NYTProf::Test::example_xsub	called_by	1	22	[ 1 0 0 0 0 0 0 main::RUNTIME ]
 sub_subinfo	Devel::NYTProf::Test::example_xsub	called_by	1	26	[ 3 0 0 0 0 0 0 main::CORE:sort ]
